maze.lessons.maze.island.IslandMaze.scala.error
Escaper:8: error: too many arguments for method getDirection: ()plm.universe.Direction
    while(!getDirection(Direction.WEST)) {
                       ^